Excluding a false bug from release note

--- a/.cmake/release.yaml
+++ b/.cmake/release.yaml
@@ -135,7 +135,7 @@ bugs:
   #
   # OPTIONAL. No bugs will be removed if not specified.
   del:
-    - MESA-698 # A work-around has been committed, not a fix.
+    - AA-723 # Bjarni added it as 'Jira-723'. A MESA-723 changeset already exists.
 
   # See the 'del' section above for a description
   #
