--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -241,8 +241,8 @@ API_TARGET(LIB vsc7549TSN            CHIP 7549TSN       DEFS -DVTSS_OPT_PORT_COU
 API_TARGET(LIB vsc7552TSN            CHIP 7552TSN       DEFS -DVTSS_OPT_PORT_COUNT=57)
 API_TARGET(LIB vsc7556TSN            CHIP 7556TSN       DEFS -DVTSS_OPT_PORT_COUNT=57)
 API_TARGET(LIB vsc7558TSN            CHIP 7558TSN       DEFS -DVTSS_OPT_PORT_COUNT=57)
-API_TARGET(LIB lan9662               CHIP 9662)
-API_TARGET(LIB lan9668               CHIP 9668)
+API_TARGET(LIB lan966x_sr            CHIP 966X          DEFS -DVTSS_OPT_FPGA=1)
+API_TARGET(LIB lan966x_ad            CHIP 966X          DEFS -DVTSS_OPT_FPGA=2)
 
 option(BUILD_MESA_CAPABILITY_DUMPER "Build all the mesa capability dumper function" OFF)
 mark_as_advanced(BUILD_MESA_CAPABILITY_DUMPER)
