BSP-Bump: Bump to newest BSP and do the needed adjustments

--- a/.cmake/cmake-presets.yaml
+++ b/.cmake/cmake-presets.yaml
@@ -6,84 +6,87 @@ presets:
     mipsel:
         :arch:             "mipsel"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release"
-        :brsdk:            "2020.02.3-326"
+        :brsdk:            "2020.02.7-354"
         :brsdk_arch:       "mipsel-mips32r2-linux-gnu"
         :brsdk_branch:     "brsdk"
-        :toolchainfile:    "mipsel-mips32r2-linux-gnu/smb/x86_64-linux/usr/share/buildroot/toolchainfile.cmake"
-        :cmake:            "mipsel-mips32r2-linux-gnu/smb/x86_64-linux/bin/cmake"
-        :legal:            "mipsel-mips32r2-linux-gnu/smb/legal-info"
+        :toolchainfile:    "mipsel-mips32r2-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
+        :cmake:            "mipsel-mips32r2-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
+        :legal:            "mipsel-mips32r2-linux-gnu/xstax/release/legal-info"
+        :release_artifact: true
 
     mipsel-debug:
         :arch:             "mipsel"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Debug"
-        :brsdk:            "2020.02.3-326"
+        :brsdk:            "2020.02.7-354"
         :brsdk_arch:       "mipsel-mips32r2-linux-gnu"
         :brsdk_branch:     "brsdk"
-        :toolchainfile:    "mipsel-mips32r2-linux-gnu/smb/x86_64-linux/usr/share/buildroot/toolchainfile.cmake"
-        :cmake:            "mipsel-mips32r2-linux-gnu/smb/x86_64-linux/bin/cmake"
-        :legal:            "mipsel-mips32r2-linux-gnu/smb/legal-info"
+        :toolchainfile:    "mipsel-mips32r2-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
+        :cmake:            "mipsel-mips32r2-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
+        :legal:            "mipsel-mips32r2-linux-gnu/xstax/release/legal-info"
 
-    lan966x:
-        :arch:             "arm64"
-        :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release -DLAN966X_ONLY=on"
-        :brsdk:            "2020.02.3-336"
-        :brsdk_arch:       "arm64-armv8_a-linux-gnu"
-        :brsdk_branch:     "brsdk.lan966x-3"
-        :toolchainfile:    "arm64-armv8_a-linux-gnu/x86_64-linux/share/buildroot/toolchainfile.cmake"
-        :cmake:            "arm64-armv8_a-linux-gnu/x86_64-linux/bin/cmake"
-        :legal:            "arm64-armv8_a-linux-gnu/ls1046/legal-info"
-        :release_artifact: true
+    #lan966x:
+    #    :arch:             "arm64"
+    #    :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release -DLAN966X_ONLY=on"
+    #    :brsdk:            "2020.02.3-336"
+    #    :brsdk:            "2020.02.7-354"
+    #    :brsdk_arch:       "arm64-armv8_a-linux-gnu"
+    #    :brsdk_branch:     "brsdk.lan966x-3"
+    #    :toolchainfile:    "arm64-armv8_a-linux-gnu/x86_64-linux/share/buildroot/toolchainfile.cmake"
+    #    :cmake:            "arm64-armv8_a-linux-gnu/x86_64-linux/bin/cmake"
+    #    :legal:            "arm64-armv8_a-linux-gnu/ls1046/legal-info"
+    #    :release_artifact: true
 
     arm64:
         :arch:             "arm64"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release"
-        :brsdk:            "2020.02.3-326"
+        :brsdk:            "2020.02.7-354"
         :brsdk_arch:       "arm64-armv8_a-linux-gnu"
         :brsdk_branch:     "brsdk"
-        :toolchainfile:    "arm64-armv8_a-linux-gnu/x86_64-linux/share/buildroot/toolchainfile.cmake"
-        :cmake:            "arm64-armv8_a-linux-gnu/x86_64-linux/bin/cmake"
-        :legal:            "arm64-armv8_a-linux-gnu/fireant/legal-info"
+        :toolchainfile:    "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
+        :cmake:            "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
+        :legal:            "arm64-armv8_a-linux-gnu/xstax/release/legal-info"
+        :release_artifact: true
 
     arm64-debug:
         :arch:             "arm64"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Debug"
-        :brsdk:            "2020.02.3-326"
+        :brsdk:            "2020.02.7-354"
         :brsdk_arch:       "arm64-armv8_a-linux-gnu"
         :brsdk_branch:     "brsdk"
-        :toolchainfile:    "arm64-armv8_a-linux-gnu/x86_64-linux/share/buildroot/toolchainfile.cmake"
-        :cmake:            "arm64-armv8_a-linux-gnu/x86_64-linux/bin/cmake"
-        :legal:            "arm64-armv8_a-linux-gnu/fireant/legal-info"
+        :toolchainfile:    "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
+        :cmake:            "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
+        :legal:            "arm64-armv8_a-linux-gnu/xstax/release/legal-info"
 
     arm64-asan:
         :arch:             "arm64"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Debug -DBUILD_ASAN=true"
-        :brsdk:            "2020.02.3-326"
+        :brsdk:            "2020.02.7-354"
         :brsdk_arch:       "arm64-armv8_a-linux-gnu"
         :brsdk_branch:     "brsdk"
-        :toolchainfile:    "arm64-armv8_a-linux-gnu/fireant/x86_64-linux/share/buildroot/toolchainfile.cmake"
-        :cmake:            "arm64-armv8_a-linux-gnu/fireant/x86_64-linux/bin/cmake"
-        :legal:            "arm64-armv8_a-linux-gnu/fireant/legal-info"
+        :toolchainfile:    "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
+        :cmake:            "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
+        :legal:            "arm64-armv8_a-linux-gnu/xstax/release/legal-info"
 
     arm:
         :arch:             "arm"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release"
-        :brsdk:            "2020.02.3-336"
+        :brsdk:            "2020.02.7-354"
         :brsdk_arch:       "arm-cortex_a8-linux-gnueabihf"
-        :brsdk_branch:     "brsdk.lan966x-3"
-        :toolchainfile:    "arm-cortex_a8-linux-gnu/x86_64-linux/share/buildroot/toolchainfile.cmake"
-        :cmake:            "arm-cortex_a8-linux-gnu/x86_64-linux/bin/cmake"
-        :legal:            "arm-cortex_a8-linux-gnu/lan966x/legal-info"
+        :brsdk_branch:     "brsdk"
+        :toolchainfile:    "arm-cortex_a8-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
+        :cmake:            "arm-cortex_a8-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
+        :legal:            "arm-cortex_a8-linux-gnu/xstax/release/legal-info"
         :release_artifact: true
 
     arm-debug:
         :arch:             "arm"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Debug"
-        :brsdk:            "2020.02.3-336"
+        :brsdk:            "2020.02.7-354"
         :brsdk_arch:       "arm-cortex_a8-linux-gnueabihf"
-        :brsdk_branch:     "brsdk.lan966x-3"
-        :toolchainfile:    "arm-cortex_a8-linux-gnu/lan966x/x86_64-linux/share/buildroot/toolchainfile.cmake"
-        :cmake:            "arm-cortex_a8-linux-gnu/lan966x/x86_64-linux/bin/cmake"
-        :legal:            "arm-cortex_a8-linux-gnu/lan966x/legal-info"
+        :brsdk_branch:     "brsdk"
+        :toolchainfile:    "arm-cortex_a8-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
+        :cmake:            "arm-cortex_a8-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
+        :legal:            "arm-cortex_a8-linux-gnu/xstax/release/legal-info"
 
     x86:
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release -DBUILD_MESA_CAPABILITY_DUMPER=true -DBUILD_MESA_DEMO=false"
