Bugzilla#None: Renaming Indy to lan8814 in non indy files

--- a/meba/CMakeLists.txt
+++ b/meba/CMakeLists.txt
@@ -118,7 +118,7 @@ MEBA_LIB(LIB_NAME servalt MEBA_SRC_FOLDER servalt
          DYNAMIC_DEPENDENCIES   mepa_vtss)
 
 MEBA_LIB(LIB_NAME ocelot MEBA_SRC_FOLDER ocelot
-         MEBA_DEFINES           MEBA_HAS_MEPA_VTSS   MEBA_HAS_MEPA_INDY
+         MEBA_DEFINES           MEBA_HAS_MEPA_VTSS   MEBA_HAS_MEPA_LAN8814
          STATIC_DEPENDENCIES    mepa_vtss_static     mepa_lan8814_static
          DYNAMIC_DEPENDENCIES   mepa_vtss            mepa_lan8814)
 
@@ -128,7 +128,7 @@ MEBA_LIB(LIB_NAME ocelot_pcb121 MEBA_SRC_FOLDER ocelot_pcb121
          DYNAMIC_DEPENDENCIES   mepa_vtss)
 
 MEBA_LIB(LIB_NAME sparx5 MEBA_SRC_FOLDER sparx5
-         MEBA_DEFINES           MEBA_HAS_MEPA_VTSS   MEBA_HAS_MEPA_AQR   MEBA_HAS_MEPA_INTEL   MEBA_HAS_MEPA_INDY
+         MEBA_DEFINES           MEBA_HAS_MEPA_VTSS   MEBA_HAS_MEPA_AQR   MEBA_HAS_MEPA_INTEL   MEBA_HAS_MEPA_LAN8814
          STATIC_DEPENDENCIES    mepa_vtss_static     mepa_aqr_static     mepa_intel_static     mepa_lan8814_static
          DYNAMIC_DEPENDENCIES   mepa_vtss            mepa_aqr            mepa_intel            mepa_lan8814)
 
