--- a/mesa/demo/CMakeLists.txt
+++ b/mesa/demo/CMakeLists.txt
@@ -53,7 +53,7 @@ include_directories(.)
 
 add_library(mesa_demo_lib STATIC trace.c cli.c port.c mac.c vlan.c packet.c ip.c
                                  debug.c symreg.c test.c spi.c uio.c ${MESA_RPC} json_rpc.c
-                                 example.c kr.c )
+                                 example.c kr.c intr.c)
 target_include_directories(mesa_demo_lib PUBLIC ${CMAKE_BINARY_DIR}/mesa-ag/)
 
 file(GLOB_RECURSE EXAMPLE_SRC
