MESA-DOC: Adding common.h and update the capdb.yaml

--- a/mesa/docs/sitemap.yaml
+++ b/mesa/docs/sitemap.yaml
@@ -167,6 +167,7 @@ pages:
 
     - name: "MESA API Reference"
       pages:
+        - src:  "mesa/include/microchip/ethernet/common.h"
         - src:  "mesa/include/microchip/ethernet/switch/api/afi.h"
         - src:  "mesa/include/microchip/ethernet/switch/api/capability.h"
         - src:  "mesa/include/microchip/ethernet/switch/api/clock.h"
