--- a/.cmake/cmake-presets.yaml
+++ b/.cmake/cmake-presets.yaml
@@ -6,9 +6,9 @@ presets:
     mipsel:
         :arch:             "mipsel"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release"
-        :brsdk:            "2021.02-465"
+        :brsdk:            "2021.02-101"
         :brsdk_arch:       "mipsel-mips32r2-linux-gnu"
-        :brsdk_branch:     "brsdk"
+        :brsdk_branch:     "2021.06-soak"
         :toolchainfile:    "mipsel-mips32r2-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "mipsel-mips32r2-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "mipsel-mips32r2-linux-gnu/xstax/release/legal-info"
@@ -17,9 +17,9 @@ presets:
     mipsel-debug:
         :arch:             "mipsel"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Debug"
-        :brsdk:            "2021.02-465"
+        :brsdk:            "2021.02-101"
         :brsdk_arch:       "mipsel-mips32r2-linux-gnu"
-        :brsdk_branch:     "brsdk"
+        :brsdk_branch:     "2021.06-soak"
         :toolchainfile:    "mipsel-mips32r2-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "mipsel-mips32r2-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "mipsel-mips32r2-linux-gnu/xstax/release/legal-info"
@@ -28,9 +28,9 @@ presets:
     #    :arch:             "arm64"
     #    :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release -DLAN966X_ONLY=on"
     #    :brsdk:            "2020.02.3-336"
-    #    :brsdk:            "2021.02-465"
+    #    :brsdk:            "2021.02-101"
     #    :brsdk_arch:       "arm64-armv8_a-linux-gnu"
-    #    :brsdk_branch:     "brsdk.lan966x-3"
+    #    :brsdk_branch:     "2021.06-soak"
     #    :toolchainfile:    "arm64-armv8_a-linux-gnu/x86_64-linux/share/buildroot/toolchainfile.cmake"
     #    :cmake:            "arm64-armv8_a-linux-gnu/x86_64-linux/bin/cmake"
     #    :legal:            "arm64-armv8_a-linux-gnu/ls1046/legal-info"
@@ -39,9 +39,9 @@ presets:
     arm64:
         :arch:             "arm64"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release"
-        :brsdk:            "2021.02-465"
+        :brsdk:            "2021.02-101"
         :brsdk_arch:       "arm64-armv8_a-linux-gnu"
-        :brsdk_branch:     "brsdk"
+        :brsdk_branch:     "2021.06-soak"
         :toolchainfile:    "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "arm64-armv8_a-linux-gnu/xstax/release/legal-info"
@@ -50,9 +50,9 @@ presets:
     arm64-debug:
         :arch:             "arm64"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Debug"
-        :brsdk:            "2021.02-465"
+        :brsdk:            "2021.02-101"
         :brsdk_arch:       "arm64-armv8_a-linux-gnu"
-        :brsdk_branch:     "brsdk"
+        :brsdk_branch:     "2021.06-soak"
         :toolchainfile:    "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "arm64-armv8_a-linux-gnu/xstax/release/legal-info"
@@ -60,9 +60,9 @@ presets:
     arm64-asan:
         :arch:             "arm64"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Debug -DBUILD_ASAN=true"
-        :brsdk:            "2021.02-465"
+        :brsdk:            "2021.02-101"
         :brsdk_arch:       "arm64-armv8_a-linux-gnu"
-        :brsdk_branch:     "brsdk"
+        :brsdk_branch:     "2021.06-soak"
         :toolchainfile:    "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "arm64-armv8_a-linux-gnu/xstax/release/legal-info"
@@ -70,9 +70,9 @@ presets:
     arm:
         :arch:             "arm"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release"
-        :brsdk:            "2021.02-465"
+        :brsdk:            "2021.02-101"
         :brsdk_arch:       "arm-cortex_a8-linux-gnueabihf"
-        :brsdk_branch:     "brsdk"
+        :brsdk_branch:     "2021.06-soak"
         :toolchainfile:    "arm-cortex_a8-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "arm-cortex_a8-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "arm-cortex_a8-linux-gnu/xstax/release/legal-info"
@@ -81,9 +81,9 @@ presets:
     arm-debug:
         :arch:             "arm"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Debug"
-        :brsdk:            "2021.02-465"
+        :brsdk:            "2021.02-101"
         :brsdk_arch:       "arm-cortex_a8-linux-gnueabihf"
-        :brsdk_branch:     "brsdk"
+        :brsdk_branch:     "2021.06-soak"
         :toolchainfile:    "arm-cortex_a8-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "arm-cortex_a8-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "arm-cortex_a8-linux-gnu/xstax/release/legal-info"
