--- a/phy_demo_appl/Makefile_10g
+++ b/phy_demo_appl/Makefile_10g
@@ -3,8 +3,8 @@
 
 XCC     = gcc
 
-DIR_vtss_api := ./base
-DIR_vtss_inc := ./include
+DIR_vtss_api := ../base
+DIR_vtss_inc := ../include
 compile_c = $(XCC) -c -o $*.o -MD -DVTSS_OPSYS_LINUX=1 -DVTSS_OPT_PORT_COUNT=4 -DVTSS_CHIP_10G_PHY -DVTSS_FEATURE_PHY_TIMESTAMP -DVTSS_FEATURE_MACSEC -I$(DIR_vtss_inc) $<
 
 OBJECTS_vtss_api_core := vtss_api.o vtss_wis_api.o vtss_phy_10g_api.o
