MESA-746: Add PRBS capability to Tesla PHY, Add api to control 6G SerDes ob_cntrl ob_post0, ob_post1, ob_prec
Merge in UNGE/sw-mesa from master.mesa-api-jira-746 to master
https://bitbucket.microchip.com/projects/UNGE/repos/sw-mesa/pull-requests/101

Squashed commit of the following:

commit c8bcd0524b30f81f96b0a499c7f707bc52f7e394
Merge: 4e8dba6f4 49987aef6
Author: john haechten <john.haechten@microchip.com>
Date:   Mon Aug 30 10:00:37 2021 -0500

    Fixing merge issues

commit 4e8dba6f4a3be0cec8407db6b0211da7bed76e7e
Author: john haechten <john.haechten@microchip.com>
Date:   Mon Aug 30 09:51:33 2021 -0500

    MESA-746: Updated Malibu and Venice EVB Build Scripts to use correct copyright

commit b4f7d2130e64e33276db8789289dd55e7ea747b4
Author: Rene Nielsen <rene.nielsen@microchip.com>
Date:   Mon Aug 30 15:39:13 2021 +0200

    Releast note: Fixed wrongly named bugs during commit

commit a5c969e4d6f0035c8234851e3a7228a21c7238bd
Author: john haechten <john.haechten@microchip.com>
Date:   Fri Aug 27 08:56:31 2021 -0500

    Jira-746: Fix compiler warnings

commit de741d2900275597e3d7c4c61320673ec6bfcefa
Author: john haechten <john.haechten@microchip.com>
Date:   Mon Aug 23 14:50:23 2021 -0500

    Jira-746: Added MESA headers for added functions

commit 3cc0223927d8a0e2ff8878c7e2829cfb8084af07
Author: john haechten <john.haechten@microchip.com>
Date:   Mon Aug 23 13:46:26 2021 -0500

    Jira-746: Fix compiler warnings, Added code to fix standalone compile options

commit bda2c463b160ad631fb95c20f93be3cef664370b
Author: john haechten <john.haechten@microchip.com>
Date:   Tue Aug 17 13:19:12 2021 -0500

    Jira-746: Add PRBS capability to Tesla PHY, Add api to control 6G SerDes ob_cntrl ob_post0, ob_post1, ob_prec

--- a/.cmake/release.yaml
+++ b/.cmake/release.yaml
@@ -135,8 +135,8 @@ bugs:
   #
   # OPTIONAL. No bugs will be removed if not specified.
   del:
-    - AA-681
-
+     - AA-681 # Was added as JIRA-681 instead of MESA-681
+     - AA-746 # Was added as JIRA-746 instead of MESA-746
   # See the 'del' section above for a description
   #
   # Example of a list:
@@ -145,5 +145,5 @@ bugs:
   #
   # OPTIONAL. No bugs will be added if not specified.
   add:
-    - MESA-681
-
+    - MESA-681 # Was added as JIRA-681
+    - MESA-746 # Was added as JIRA-746
