--- a/mepa/CMakeLists.txt
+++ b/mepa/CMakeLists.txt
@@ -8,11 +8,10 @@ cmake_minimum_required(VERSION 2.8.12)
 option(BUILD_MEPA_ALL "Build all MEPA libraries" OFF)
 mark_as_advanced(BUILD_MEPA_ALL)
 
-include_directories(../me/include)
-include_directories(../mesa/include)
-include_directories(../meba/include)
-include_directories(include)
-include_directories(src/vtss/include)
+include_directories(../mesa/include)  # TODO, delete
+include_directories(../meba/include)  # TODO, delete
+include_directories(src/vtss/include) # TODO, delete
+set(inc_mepa ../me/include include)
 
 set(src_vtss src/vtss.c
              src/vtss_ts.c
@@ -43,52 +42,58 @@ set(src_vtss src/vtss.c
              src/vtss/src/ts/vtss_phy_ewis.c
              src/vtss/src/ts/vtss_phy_ts_util.c
              src/vtss/src/mesa_phy.c)
+set(inc_vtss src/vtss/include)
 
-add_library(mepa_vtss SHARED ${src_vtss})
+add_library(mepa_vtss        SHARED ${src_vtss})
 add_library(mepa_vtss_static STATIC ${src_vtss})
 set_target_properties(mepa_vtss_static PROPERTIES OUTPUT_NAME mepa_vtss)
+target_include_directories(mepa_vtss        PUBLIC ${inc_mepa} PRIVATE ${inc_vtss})
+target_include_directories(mepa_vtss_static PUBLIC ${inc_mepa} PRIVATE ${inc_vtss})
 
-add_library(mepa_lan8814 SHARED src/microchip/lan8814.c src/microchip/lan8814_ts.c)
+set(inc_lan8814 mepa/src/microchip)
+add_library(mepa_lan8814        SHARED src/microchip/lan8814.c src/microchip/lan8814_ts.c)
 add_library(mepa_lan8814_static STATIC src/microchip/lan8814.c src/microchip/lan8814_ts.c)
 set_target_properties(mepa_lan8814_static PROPERTIES OUTPUT_NAME mepa_lan8814)
+target_include_directories(mepa_lan8814        PUBLIC ${inc_mepa} PRIVATE ${inc_lan8814})
+target_include_directories(mepa_lan8814_static PUBLIC ${inc_mepa} PRIVATE ${inc_lan8814})
 
 include_directories(".")
-include_directories("src/aqr/AQR_API_2.6.1/include")
-include_directories("src/aqr/AQR_API_2.6.1/include/registerMap")
-include_directories("src/aqr/AQR_API_2.6.1/include/registerMap/APPIA")
-include_directories("src/aqr/AQR_API_2.6.1/include/registerMap/EUR")
-include_directories("src/aqr/AQR_API_2.6.1/include/registerMap/HHD")
-include_directories("src/aqr/aqr_phy_fw")
 
 set(src_aqr src/aqr/phy_driver.c
-	    src/aqr/vtss_platform/AQ_PhyInterface.c
-	    src/aqr/vtss_platform/AQ_PlatformRoutines.c
-	    src/aqr/AQR_API_2.6.1/src/AQ_API.c
-	    src/aqr/AQR_API_2.6.1/src/AQ_API_flash.c)
-
-
-add_library(mepa_aqr SHARED ${src_aqr})
+            src/aqr/vtss_platform/AQ_PhyInterface.c
+            src/aqr/vtss_platform/AQ_PlatformRoutines.c
+            src/aqr/AQR_API_2.6.1/src/AQ_API.c
+            src/aqr/AQR_API_2.6.1/src/AQ_API_flash.c)
+set(inc_aqr src/aqr/AQR_API_2.6.1/include
+            src/aqr/AQR_API_2.6.1/include/registerMap
+            src/aqr/AQR_API_2.6.1/include/registerMap/APPIA
+            src/aqr/AQR_API_2.6.1/include/registerMap/EUR
+            src/aqr/AQR_API_2.6.1/include/registerMap/HHD
+            src/aqr/aqr_phy_fw)
+add_library(mepa_aqr        SHARED ${src_aqr})
 add_library(mepa_aqr_static STATIC ${src_aqr})
 set_target_properties(mepa_aqr_static PROPERTIES OUTPUT_NAME mepa_aqr)
+target_include_directories(mepa_aqr        PUBLIC ${inc_mepa} PRIVATE ${inc_aqr})
+target_include_directories(mepa_aqr_static PUBLIC ${inc_mepa} PRIVATE ${inc_aqr})
 
-include_directories("src/intel/GPY_API_v251/src/os/linux")
-include_directories("src/intel/GPY_API_v251/src/inc")
 
+set(CMAKE_C_FLAGS "-DP31G_B0=1 -DSAFE_C_LIB=0")
 set(src_intel src/intel/phy_driver.c
               src/intel/GPY_API_v251/src/api/phy/gpy211_chip.c
               src/intel/GPY_API_v251/src/api/phy/gpy211_phy.c)
-
-set(CMAKE_C_FLAGS "-DP31G_B0=1 -DSAFE_C_LIB=0")
+set(inc_intel src/intel/GPY_API_v251/src/os/linux
+              src/intel/GPY_API_v251/src/inc)
 add_library(mepa_intel SHARED ${src_intel})
 add_library(mepa_intel_static STATIC ${src_intel})
 set_target_properties(mepa_intel_static PROPERTIES OUTPUT_NAME mepa_intel)
-
-
-include_directories("src/ksz9031")
-
-set(src_ksz9031 src/ksz9031/phy_driver.c )
+target_include_directories(mepa_intel        PUBLIC ${inc_mepa} PRIVATE ${inc_intel})
+target_include_directories(mepa_intel_static PUBLIC ${inc_mepa} PRIVATE ${inc_intel})
 
 set(CMAKE_C_FLAGS "-DP31G_B0=1 -DSAFE_C_LIB=0")
+set(src_ksz9031 src/ksz9031/phy_driver.c )
+set(inc_ksz9031 src/ksz9031)
 add_library(mepa_ksz9031 SHARED ${src_ksz9031})
 add_library(mepa_ksz9031_static STATIC ${src_ksz9031})
 set_target_properties(mepa_ksz9031_static PROPERTIES OUTPUT_NAME mepa_ksz9031)
+target_include_directories(mepa_ksz9031        PUBLIC ${inc_mepa} PRIVATE ${inc_ksz9031})
+target_include_directories(mepa_ksz9031_static PUBLIC ${inc_mepa} PRIVATE ${inc_ksz9031})
