--- a/.cmake/release.yaml
+++ b/.cmake/release.yaml
@@ -135,7 +135,10 @@ bugs:
   #
   # OPTIONAL. No bugs will be removed if not specified.
   del:
-     - AA-681 # Was added as JIRA-681 instead of MESA-681
+     - AA-681   # Was added as JIRA-681 instead of MESA-681
+     - MESA-742 # Not fixed yet
+     - MESA-746 # Apparently not totally fixed by John Haechten
+
   # See the 'del' section above for a description
   #
   # Example of a list:
@@ -145,4 +148,3 @@ bugs:
   # OPTIONAL. No bugs will be added if not specified.
   add:
     - MESA-681 # Was added as JIRA-681
-    - MESA-746 # Was added as JIRA-746
